--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to OpenShift</title>
+  <title>Insta4Ceres</title>
 </head>
 <body>
 <style type="text/css">
@@ -25,11 +25,23 @@
 </style>
 
 <div id="fb-root"></div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
 
-    var tokenacc;
-
+    var tokenacc, token, host;
+    var getParams = function (url) {
+        var params = {};
+        var parser = document.createElement('a');
+        parser.href = url;
+        var query = parser.search.substring(1);
+        var vars = query.split('&');
+        for (var i = 0; i < vars.length; i++) {
+            var pair = vars[i].split('=');
+            params[pair[0]] = decodeURIComponent(pair[1]);
+        }
+        return params;
+    };
+    host = getParams(location.href).host;
     function statusChangeCallback(response) {
         console.log('statusChangeCallback');
         console.log(response);
@@ -98,11 +110,16 @@
             'GET',
             {},
             function(response) {
+                console.log(response);
                 for(var index in response.data){
                     var btn = document.createElement("BUTTON");
-                    var t = document.createTextNode(ac.addiresponse.data[index].name);
+                    var t = document.createTextNode(response.data[index].name);
+                    console.log(response.data[index]);
                     btn.appendChild(t);
                     ac.appendChild(btn);
+                    btn.onclick = function(){
+                        location.href = encodeURI(host + '?token=' + response.data[index].access_token + '&id=' + response.data[index].id)
+                    }
                 }
             }
         );
@@ -121,7 +138,7 @@
     <img src="../images/backend/logo.png" />
 </div>
 <div align="center" style="margin-top: 20px;">
-    <div id="fbbutton" style="visibility: visible;" class="fb-login-button" data-width="10" data-max-rows="1" data-size="medium" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" align="center"></div>
+    <div id="fbbutton" style="visibility: visible;" class="fb-login-button" data-width="10" data-max-rows="1" data-size="medium" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true" align="center"></div>
 </div>
 <div align="center" style="margin-top: 15px;">
     <div id="tokenInsta"><span style="font-family: Helvetica, Arial, sans-serif; letter-spacing: .25px; padding: 3px; font-weight: 600; font-size: 13px; color: #ffffff;">A c c e s s  -  T o k e n</span></div>
